# Nile-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  \  _notes.wiki  compile_commands.json  notes.wiki
app/: main.cpp
cmake/: FindSDL2_mixer.cmake
examples/platformer/: CMakeLists.txt  compile_commands.json
examples/platformer/app/: main.cc
examples/platformer/assets/models/container/: container.mtl
examples/platformer/assets/models/pizza_box/: pizza_box.mtl
examples/platformer/assets/models/stonetile/: stonetile.mtl
examples/platformer/assets/shaders/: compile.sh  lamp_fragment.glsl  lamp_vertex.glsl  line_fragment.glsl  line_vertex.glsl  mesh_fragment.glsl  mesh_vertex.glsl  model.frag.glsl  model.vert.glsl  model_fragment.glsl  model_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl
examples/platformer/assets/vk_shaders/: compile.sh  shader.frag  shader.vert  shader.vert.spv
examples/platformer/cmake/: Misc.cmake
examples/platformer/src/: main.cc  platformer.cc  platformer.hh  screen_text.cc  screen_text.hh  text_buffer.cc  text_buffer.hh
examples/platformer/src/enviroment/: enviroment_items.cc  enviroment_items.hh
examples/platformer/src/npc/: main_character.cc  main_character.hh
include/: project_config.h.in
include/2d/: 2d_camera.hh  sprite_renderer.hh  sprite_sheet.hh  spritesheet_context.hh
include/Nile/2d/: 2d_camera.hh  sprite.hh  sprite_renderer.hh  sprite_sheet.hh  spritesheet_context.hh
include/Nile/application/: game.hh
include/Nile/asset/: asset.hh  asset_container.hh  asset_manager.hh
include/Nile/asset/builder/: asset_builder.hh  model_builder.hh  shaderset_builder.hh
include/Nile/asset/subsystem/: asset_loader.hh  font_loader.hh  texture_loader.hh
include/Nile/core/: assert.hh  camera_system.hh  error_code.hh  file_system.hh  helper.hh  input_manager.hh  logger.hh  nile.hh  reference.hh  settings.hh  signal.hh  timer.hh  transform_system.hh  types.hh
include/Nile/debug/: benchmark_timer.hh
include/Nile/drivers/vulkan/: vulkan_buffer.hh  vulkan_device.hh  vulkan_rendering_device.hh  vulkan_utils.hh  vulkan_vertex.hh
include/Nile/ecs/: component_manager.hh  component_storage.hh  ecs_coordinator.hh  ecs_field_detection.hh  ecs_system.hh  ecs_system_manager.hh  entity_manager.hh  handle.hh  handle_manager.hh
include/Nile/ecs/components/: camera_component.hh  font_component.hh  mesh_component.hh  primitive.hh  relationship.hh  renderable.hh  sprite.hh  transform.hh
include/Nile/editor/: editor.hh  info_overlay_struct.hh  info_window.hh
include/Nile/experimental/: mesh.hh  model.hh  texture.hh  vertex.hh
include/Nile/experimental/2d/: sprite.hh  sprite_renderer.hh  sprite_set.hh  sprite_sheet.hh  spritesheet_context.hh
include/Nile/experimental/asset/: asset_manager_helper.hh
include/Nile/experimental/core/: ts_unordered_map.hh
include/Nile/game/: game.hh
include/Nile/graphics/: rendering_device.hh
include/Nile/log/: editor_console_logger.hh  log.hh  log_type.hh  stream_logger.hh
include/Nile/math/: utils.hh
include/Nile/platform/: game_host.hh
include/Nile/platform/x11/: bootstrap.hh  game_host_x11.hh
include/Nile/renderer/: base_renderer.hh  font.hh  font_renderer.hh  font_rendering_system.hh  mesh.hh  model.hh  opengl_framebuffer.hh  opengl_renderer.hh  render_primitive_system.hh  rendering_system.hh  shader.hh  shaderset.hh  sprite_rendering_system.hh  texture2d.hh
include/Nile/scene/: scene_graph.hh  scene_node.hh
include/Nile/utils/: font_character.hh  string_utils.hh  vertex.hh
include/core/: input_manager.hh  logger.hh  nile.hh  settings.hh  signal.hh
include/game/: game.hh
include/renderer/: base_renderer.hh  font_renderer.hh  opengl_renderer.hh  shader.hh  texture2d.hh
include/resource/: resource_manager.hh
resources/shaders/: screen_fb_fragment.glsl  screen_fb_vertex.glsl
shaders/: font_fragment.glsl  font_vertex.glsl  line_fragment.glsl  line_vertex.glsl  mesh_fragment.glsl  sprite_vertex.glsl  spritesheet_fragment.glsl  spritesheet_vertex.glsl
src/2d/: 2d_camera.cc  CMakeLists.txt  sprite.cc  sprite_renderer.cc  sprite_sheet.cc  spritesheet_context.cc
src/application/: game.cc
src/asset/: asset_container.cc  asset_manager.cc
src/asset/builder/: model_builder.cc  shaderset_builder.cc
src/asset/subsystem/: asset_loader.cc  font_loader.cc  texture_loader.cc
src/core/: CMakeLists.txt  camera_system.cc  error_code.cc  file_system.cc  input_manager.cc  logger.cc  logger_deprecated.cc  settings.cc  signal.cc  timer.cc  transform_system.cc
src/drivers/vulkan/: vulkan_buffer.cc  vulkan_device.cc  vulkan_rendering_device.cc  vulkan_utils.cc
src/ecs/: component_storage.cc  ecs_coordinator.cc  ecs_system_manager.cc  entity_manager.cc  handle_manager.cc
src/editor/: debug_console.cc  editor.cc  info_window.cc
src/experimental/: mesh.cc  model.cc
src/experimental/2d/: sprite.cc  sprite_renderer.cc  sprite_set.cc  sprite_sheet.cc  spritesheet_context.cc
src/experimental/asset/: asset_manager_helper.cc
src/experimental/core/: ts_unordered_map.cc
src/game/: CMakeLists.txt  game.cc
src/graphics/: rendering_device.cc
src/log/: editor_console_logger.cc  log.cc  stream_logger.cc
src/math/: utils.cc
src/platform.x11/: bootstrap.cc  game_host_x11.cc
src/renderer/: CMakeLists.txt  base_renderer.cc  font_renderer.cc  font_rendering_system.cc  mesh.cc  opengl_framebuffer.cc  opengl_renderer.cc  render_primitive_system.cc  rendering_system.cc  shader.cc  shaderset.cc  sprite_rendering_system.cc  texture2d.cc
src/resource/: CMakeLists.txt  resource_manager.cc
src/scene/: scene_graph.cc  scene_node.cc
tests/: CMakeLists.txt  compile_commands.json  main.cc
tests/ecs/: entity.test.cc  entity_manager.test.cc  relationship.test.cc
